// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pcln-slider RangeSlider 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  height: 32px;
  padding-top: 12px;
  border-radius: 9999px;
  touch-action: none;
}

.c1 .rc-slider-rail,
.c1 .rc-slider-track {
  height: 8px;
}

.c1 .rc-slider-handle {
  width: 32px;
  height: 32px;
  margin-left: -16px;
  margin-top: -12px;
}

.c1 .rc-slider-rail {
  position: absolute;
  width: 100%;
  background-color: #f4f6f8;
  border-radius: 9999px;
}

.c1 .rc-slider-track {
  position: absolute;
  left: 0;
  border-radius: 9999px;
  background-color: #0068EF;
}

.c1 .rc-slider-handle {
  position: absolute;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-radius: 9999px;
  border: solid 4px #0068EF;
  background-color: #fff;
  touch-action: pan-x;
}

.c1 .rc-slider-handle:focus {
  box-shadow: 0 0 0 2px #e8f2ff;
}

.c1.rc-slider-disabled {
  color: #c0cad5;
}

.c1.rc-slider-disabled .rc-slider-handle {
  box-shadow: none;
  cursor: default;
}

<div
    class="c0"
  >
    <div
      class="rc-slider c1"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track rc-slider-track-1"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle rc-slider-handle-1"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle rc-slider-handle-2"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="rc-slider-mark"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pcln-slider Slider 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  position: relative;
  height: 32px;
  padding-top: 12px;
  border-radius: 9999px;
  touch-action: none;
}

.c1 .rc-slider-rail,
.c1 .rc-slider-track {
  height: 8px;
}

.c1 .rc-slider-handle {
  width: 32px;
  height: 32px;
  margin-left: -16px;
  margin-top: -12px;
}

.c1 .rc-slider-rail {
  position: absolute;
  width: 100%;
  background-color: #f4f6f8;
  border-radius: 9999px;
}

.c1 .rc-slider-track {
  position: absolute;
  left: 0;
  border-radius: 9999px;
  background-color: #0068EF;
}

.c1 .rc-slider-handle {
  position: absolute;
  cursor: pointer;
  cursor: -webkit-grab;
  cursor: -moz-grab;
  cursor: grab;
  border-radius: 9999px;
  border: solid 4px #0068EF;
  background-color: #fff;
  touch-action: pan-x;
}

.c1 .rc-slider-handle:focus {
  box-shadow: 0 0 0 2px #e8f2ff;
}

.c1.rc-slider-disabled {
  color: #c0cad5;
}

.c1.rc-slider-disabled .rc-slider-handle {
  box-shadow: none;
  cursor: default;
}

<div
    class="c0"
  >
    <div
      class="rc-slider c1"
    >
      <div
        class="rc-slider-rail"
      />
      <div
        class="rc-slider-track"
        style="left: 0%; width: 0%;"
      />
      <div
        class="rc-slider-step"
      />
      <div
        aria-disabled="false"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rc-slider-handle"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
      <div
        class="rc-slider-mark"
      />
    </div>
  </div>
</DocumentFragment>
`;
